# personal-agent

./: .env.example  .eslintrc.json  .gitignore  .gitleaks.toml  .prettierignore  .prettierrc  AGENTS.md  AUDIT_COMPLETE.md  AUTO_MODE.md  CHANGELOG.md  CONTRIBUTING.md  DESKTOP_MIGRATION_PLAN.md  LICENSE  PLAN.md  PROJECTS.md  README.md  SECURITY.md  TODO.md  VISION.md  electron-builder.config.mjs  electron-builder.json5  knip.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  vitest.setup.ts
.githooks/: pre-commit
docs/: README.md  activity-tree.md  agent-browser.md  agent-tool-map.md  alerts.md  apply-patch.md  apps.md  architecture-improvement-plan.md  architecture.md  artifacts.md  ask-user-question.md  async-attention.md  auto-mode.md  automation.md  automations.md  browser-extension.md  browser.md  change-working-directory.md  checkpoints.md  cli.md  command-line.md  configuration.md  conversation-context.md  conversation-inspect.md  conversations.md  daemon-architecture.md  daemon.md  decision-guide.md  desktop-app.md  desktop-demo.md  development.md  dictation-transcription.md  dictation.md  diff-viewer.md  docs.json  electron-desktop-app-plan.md  electron-desktop-app-spec.md  execution-targets.md  extension-tools-audit.md  extensions.md  (+51 more)
experimental-extensions/: README.md  package.json
extensions/: README.md  exit-alias.test.ts  exit-alias.ts  package-lock.json  package.json
extensions/system-alleycat/sidecar/: Cargo.toml
internal-skills/: README.md
patches/: @earendil-works__pi-ai@0.74.0.patch  (+1 more)
(+762 files in other folders)
