[package]
name = "pa-alleycat-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.22"
hostname = "0.4"
iroh = "0.98.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
